fix log image alignment

--- a/app/assets/stylesheets/users/logbook/logbook.scss
+++ b/app/assets/stylesheets/users/logbook/logbook.scss
@@ -127,6 +127,7 @@
     width: 100%;
     max-width: 600px;
     position: relative;
+    display: block;
     margin: 0 auto;
   }
 
